# VulkanRenderingTemplate

./: .gitignore  CMakeLists.txt  Makefile  conanfile.py  linux_release  windows_release
app/: main.cpp
assets/shaders/: grid.frag  grid.vert  sphere.frag  sphere.vert  sprite.frag  sprite.vert
cmake/tools/: compile-shader.cmake
include/: FileWatcher.hpp  Process.hpp  SandboxApp.hpp  ShaderCompiler.hpp  Singleton.hpp  Time.hpp
include/app/: Application.hpp  Engine.hpp  EngineContext.hpp  SandboxApp.hpp
include/assets/: AssetManager.hpp  ShaderCompiler.hpp
include/core/: Log.hpp  Time.hpp  types.hpp
include/editor/: DebugRegistry.hpp
include/gfx/: Buffer.hpp  CommandBuffers.hpp  CommandPool.hpp  DebugUtilsMessenger.hpp  Descriptors.hpp  Device.hpp  Instance.hpp  SwapChain.hpp  SyncObjects.hpp  Texture.hpp
include/materials/: ColorMaterial.hpp  GridMaterial.hpp  Material.hpp  SpriteMaterial.hpp
include/platform/: Input.hpp  Window.hpp
include/render/: IRenderTarget.hpp  PipelineManager.hpp  RenderGraph.hpp  RenderObject.hpp  RenderTarget.hpp
include/scene/: Camera.hpp  Components.hpp  Geometry.hpp  Model.hpp  Physics.hpp  PhysicsDebugRenderer.hpp  PhysicsSystem.hpp  Scene.hpp
include/vks/: Application.hpp  AssetManager.hpp  AssetRegistry.hpp  Camera.hpp  CameraUBO.hpp  ColorMaterial.hpp  CommandBuffers.hpp  Device.hpp  Engine.hpp  EngineContext.hpp  Geometry.hpp  GeometryPipeline.hpp  GraphicsPipeline.hpp  GridMaterial.hpp  Input.hpp  KeyCodes.hpp  Material.hpp  Model.hpp  Physics.hpp  PipelineManager.hpp  RenderObject.hpp  RenderPass.hpp  Scene.hpp  SpriteMaterial.hpp  SwapChain.hpp  SyncObjects.hpp  Texture.hpp  Window.hpp
src/: Application.cpp  ColorMaterial.cpp  CommandBuffers.cpp  DebugUtilsMessenger.cpp  Device.cpp  Engine.cpp  FileWatcher.cpp  Geometry.cpp  GeometryPipeline.cpp  GraphicsPipeline.cpp  IRenderPass.cpp  Input.cpp  Log.cpp  Material.cpp  Model.cpp  Physics.cpp  PipelineManager.cpp  Process.cpp  RenderObject.cpp  RenderPass.cpp  SandboxApp.cpp  ShaderCompiler.cpp  SpriteMaterial.cpp  SwapChain.cpp  SyncObjects.cpp  Texture.cpp  Window.cpp
src/Basic/: BasicCommandBuffers.cpp  BasicRenderPass.cpp  GeometryPass.cpp
src/Events/: EventManager.cpp
src/ImGui/: ImGuiApp.cpp  ImGuiRenderPass.cpp
src/Render/: GraphicsPipelineBuilder.cpp  RenderGraoh.cpp
src/UI/: AssetBrowserPanel.cpp  EditorResourceManager.cpp  EngineEditor.cpp  SceneHierarchyPanel.cpp
src/app/: Application.cpp  Engine.cpp  SandboxApp.cpp
src/assets/: ShaderCompiler.cpp
src/core/: FileWatcher.cpp  Log.cpp  Process.cpp
src/gfx/: Buffer.cpp  CommandBuffers.cpp  CommandPool.cpp  DebugUtilsMessenger.cpp  Descriptors.cpp  Device.cpp  Instance.cpp  QueueFamily.cpp  SwapChain.cpp  SyncObjects.cpp  Texture.cpp
src/materials/: ColorMaterial.cpp  Material.cpp  SpriteMaterial.cpp
src/platform/: Input.cpp  Window.cpp
src/render/: RenderGraoh.cpp  RenderGraph.cpp  RenderTarget.cpp
src/scene/: Geometry.cpp  Model.cpp  Physics.cpp  PhysicsDebugRenderer.cpp  (+2 more)
(+49 files in other folders)
